Deduplicate listings in auction tracker digest handler